--- a/server_management/bin/install
+++ b/server_management/bin/install
@@ -28,7 +28,8 @@ function install_golang() {
 	echo "Installing Go Language..."
 	wget https://golang.org/dl/go1.17.2.linux-amd64.tar.gz
 	sudo tar -C /usr/local -xzf go1.17.2.linux-amd64.tar.gz
-	export PATH=$PATH:/usr/local/go/bin
+	echo "export PATH=$PATH:/usr/local/go/bin" >>~/.bashrc
+	source ~/.bashrc
 	echo "Go Language installed successfully"
 }
 
